add google analytics tag

--- a/main/templates/main/contact_form.html
+++ b/main/templates/main/contact_form.html
@@ -1,6 +1,15 @@
 {% extends 'main/base.html' %}
 
+
+
+
+
+
 {% block content %}
+    <div id="root"></div>
+    </br>
+    <div id="like_button_container"></div>
+
 
     <div class="col mx-auto mt-3" style="max-width: 40rem;">
 
