--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -3,6 +3,15 @@
 <html lang="en">
   <head>
     <!-- Required meta tags -->
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-D9RFY3CHB8"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-D9RFY3CHB8');
+    </script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -55,6 +64,11 @@
         </script>
     </div>
 
+    <!--React Fun-->
+  <script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin></script>
+    <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script>
+  <script src="{% static 'main/js/like_button.js' %}" type="text/babel"></script>
+  <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
 
   </body>
 </html>
