--- a/main/templates/main/products.html
+++ b/main/templates/main/products.html
@@ -136,12 +136,11 @@
 
   {% for category in foodcategories %}
   <div class="tab-pane fade" id="nav-{{category.slug}}" role="tabpanel" aria-labelledby="nav-{{category.slug}}-tab">
-    <!-- maybe some category info here, but better dont mess with it now -->
       <div class="row">
       <div class="card-columns">
           {% for prod in products %}
             {% if prod.category == category %}
-            <div class="col-mb-5">
+            <div class="col">
                 <div class="card mb-3" style="max-width: 40rem;">
                   <div class="row no-gutters">
                     <div class="col-4 my-auto">
