--- a/main/templates/main/recipes.html
+++ b/main/templates/main/recipes.html
@@ -35,10 +35,10 @@
 {% elif not count or count > 1 %}
 <form method="get" action="">
     <div class="form-row mb-3">
-        <div class="col-1 mx-auto">
+        <div class="col-4 col-sm-2 mx-auto">
             <strong>Order by:</strong>
         </div>
-        <div class="col-4 mx-auto">
+        <div class="col-8 col-sm-4 mx-auto mb-1">
             <select class="form-control" name="filter" id="filter">
                 <option value="recipe_posted">Date</option>
                 <option value="calories_per_serving">Calories</option>
@@ -46,7 +46,7 @@
                 <option value="preparation_time">Preparation time</option>
             </select>
         </div>
-        <div class="col-3 mx-auto">
+        <div class="col-10 col-sm-4 mx-auto">
             <div class="form-check form-check-inline">
                 <!-- Check this warnings, how to make it work legal way? -->
                 <input class="form-check-input" type="radio" name="ord" id="desc" value="desc" {{desc}}>
@@ -63,7 +63,9 @@
         <input type="hidden" name="q" value="{{query}}">
 
         </div>
-        <button type="submit" class="btn btn-outline-secondary mx-auto">Apply</button>
+        <div class="col-2 col-sm-1 mx">
+                <button type="submit" class="btn btn-outline-secondary mx-auto">Apply</button>
+        </div>
     </div>
 </form>
 
