--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -14,7 +14,7 @@
     </script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+    <link rel="shortcut icon" type="image/png" sizes="16x16" href="{% static 'main/awkd.png' %}"/>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <!--My CSS -->
@@ -61,12 +61,6 @@
             })
         </script>
     </div>
-
-    <!--React Fun-->
-  <script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin></script>
-    <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script>
-  <script src="{% static 'main/js/like_button.js' %}" type="text/babel"></script>
-  <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
 
   </body>
 </html>
